--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">HWProject</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_game">Game</string>
+    <string name="title_activity_leaves_game_popup">LeavesGamePopup</string>
+    <string name="title_activity_resulut_popup">ResulutPopup</string>
 
 </resources>
